First git state with preversion 2.0
artificially filed with ongoing development of version 2.0
big gap with previous commit

--- a/mylibs/Makefile
+++ b/mylibs/Makefile
@@ -19,10 +19,13 @@ doc: $(VFILES:.v=.glob)
 
 clean :
 	rm -f $(VFILES:.v=.vo)
+	rm -f .*.aux
+	rm -f *.crashcoqide
 	rm -f *.glob
 	rm -f *.html
 	rm -f coqdoc.css
 	rm -f lia.cache
+	rm -f .lia.cache
 
 .PHONY: clean
 .PRECIOUS: %.vo %.glob
