--- a/yalla/Makefile
+++ b/yalla/Makefile
@@ -1,5 +1,5 @@
 
-COQ = coqc -R $(MYLIBSDIR) ''
+COQ = coqc
 COQDOC = coqdoc -g
 
 VFILES = $(wildcard *.v)
@@ -20,7 +20,6 @@ doc: $(VFILES:.v=.glob)
 clean:
 	rm -f $(VFILES:.v=.vo)
 	rm -f .*.aux
-	rm -f *.crashcoqide
 	rm -f *.glob
 	rm -f *.html
 	rm -f coqdoc.css
@@ -31,44 +30,37 @@ clean:
 .PRECIOUS: %.vo %.glob
 
 
-MYLIBSDIR = ../mylibs
-
 .DEFAULT_GOAL := all
 
-all: cutelim
+all: $(VFILES:.v=.vo)
 
-mylibs:
-	cd $(MYLIBSDIR) && $(MAKE)
+Bool_more.vo: Bool_more.v
+CPermutation_solve.vo: CPermutation_solve.v List_more.vo CyclicPerm.vo
+CyclicPerm.vo: CyclicPerm.v List_more.vo Permutation_more.vo
+genperm.vo: genperm.v Permutation_more.vo Permutation_solve.vo CyclicPerm.vo CPermutation_solve.vo Injective.vo
+Injective.vo: Injective.v List_more.vo Permutation_more.vo
+List_more.vo: List_more.v
+Permutation_more.vo: Permutation_more.v List_more.vo
+Permutation_solve.vo: Permutation_solve.v List_more.vo Permutation_more.vo
 
-cutelim: mylibs $(VFILES:.v=.vo)
+basic_tactics.vo: basic_tactics.v Permutation_solve.vo genperm.vo
+flat_map_lemmas.vo : flat_map_lemmas.v List_more.vo Permutation_more.vo CyclicPerm.vo Permutation_solve.vo CPermutation_solve.vo genperm.vo basic_tactics.vo
 
-include $(MYLIBSDIR)/mylibs.mk
-
-basic_tactics.vo: basic_tactics.v $(MYLIBSDIR)/Permutation_solve.vo $(MYLIBSDIR)/genperm.vo
-flat_map_lemmas.vo : flat_map_lemmas.v $(MYLIBSDIR)/List_more.vo $(MYLIBSDIR)/Permutation_more.vo $(MYLIBSDIR)/CyclicPerm.vo $(MYLIBSDIR)/Permutation_solve.vo $(MYLIBSDIR)/CPermutation_solve.vo $(MYLIBSDIR)/genperm.vo basic_tactics.vo
-
-formulas.vo: formulas.v $(MYLIBSDIR)/Injective.vo yalla_ax.vo
-fmformulas.vo: fmformulas.v $(MYLIBSDIR)/Injective.vo $(MYLIBSDIR)/nattree.vo $(MYLIBSDIR)/fmsetlist.vo formulas.vo
-ll_fragments.vo: ll_fragments.v $(MYLIBSDIR)/Permutation_more.vo $(MYLIBSDIR)/genperm.vo ll.vo subs.vo
-ll.vo: ll.v $(MYLIBSDIR)/Injective.vo $(MYLIBSDIR)/Bool_more.vo $(MYLIBSDIR)/List_more.vo $(MYLIBSDIR)/Permutation_more.vo $(MYLIBSDIR)/CyclicPerm.vo $(MYLIBSDIR)/Permutation_solve.vo $(MYLIBSDIR)/CPermutation_solve.vo $(MYLIBSDIR)/genperm.vo basic_tactics.vo flat_map_lemmas.vo formulas.vo
+formulas.vo: formulas.v Injective.vo yalla_ax.vo
+ll_fragments.vo: ll_fragments.v Permutation_more.vo genperm.vo ll.vo subs.vo
+ll.vo: ll.v Injective.vo Bool_more.vo List_more.vo Permutation_more.vo CyclicPerm.vo Permutation_solve.vo CPermutation_solve.vo genperm.vo basic_tactics.vo flat_map_lemmas.vo formulas.vo
 iformulas.vo: iformulas.v yalla_ax.vo
-fmiformulas.vo: fmiformulas.v $(MYLIBSDIR)/Injective.vo $(MYLIBSDIR)/nattree.vo $(MYLIBSDIR)/fmsetlist.vo iformulas.vo
-ill.vo: ill.v $(MYLIBSDIR)/Injective.vo $(MYLIBSDIR)/Bool_more.vo $(MYLIBSDIR)/List_more.vo $(MYLIBSDIR)/Permutation_more.vo $(MYLIBSDIR)/CyclicPerm.vo $(MYLIBSDIR)/Permutation_solve.vo $(MYLIBSDIR)/CPermutation_solve.vo $(MYLIBSDIR)/genperm.vo ll.vo iformulas.vo ll_fragments.vo
-subs.vo: subs.v $(MYLIBSDIR)/List_more.vo $(MYLIBSDIR)/genperm.vo ll.vo
-isubs.vo: isubs.v $(MYLIBSDIR)/List_more.vo $(MYLIBSDIR)/genperm.vo basic_tactics.vo ill.vo
+ill.vo: ill.v Injective.vo Bool_more.vo List_more.vo Permutation_more.vo CyclicPerm.vo Permutation_solve.vo CPermutation_solve.vo genperm.vo ll.vo iformulas.vo ll_fragments.vo
+subs.vo: subs.v List_more.vo genperm.vo ll.vo
+isubs.vo: isubs.v List_more.vo genperm.vo basic_tactics.vo ill.vo
 
-mell2.vo: mell2.v $(MYLIBSDIR)/Injective.vo $(MYLIBSDIR)/List_more.vo $(MYLIBSDIR)/Permutation_more.vo $(MYLIBSDIR)/Permutation_solve.vo ll.vo
-lambek.vo: lambek.v $(MYLIBSDIR)/Injective.vo $(MYLIBSDIR)/List_more.vo ill.vo
-mell_mset.vo : mell_mset.v $(MYLIBSDIR)/Injective.vo $(MYLIBSDIR)/nattree.vo $(MYLIBSDIR)/List_more.vo $(MYLIBSDIR)/Permutation_more.vo $(MYLIBSDIR)/fmsetlist.vo ll.vo fmformulas.vo
-mell_msetoid.vo : mell_msetoid.v $(MYLIBSDIR)/Injective.vo $(MYLIBSDIR)/fmsetoidlist.vo $(MYLIBSDIR)/List_more.vo $(MYLIBSDIR)/Permutation_more.vo ll.vo
-llpol.vo: llpol.v $(MYLIBSDIR)/Injective.vo $(MYLIBSDIR)/List_more.vo $(MYLIBSDIR)/Permutation_more.vo $(MYLIBSDIR)/Permutation_solve.vo ll.vo
-llfoc.vo: llfoc.v $(MYLIBSDIR)/List_more.vo $(MYLIBSDIR)/Permutation_more.vo $(MYLIBSDIR)/genperm.vo ll_fragments.vo
-tl.vo: tl.v $(MYLIBSDIR)/Injective.vo $(MYLIBSDIR)/Bool_more.vo $(MYLIBSDIR)/List_more.vo $(MYLIBSDIR)/genperm.vo ill.vo ll.vo
+llfoc.vo: llfoc.v List_more.vo Permutation_more.vo genperm.vo ll_fragments.vo
+tl.vo: tl.v Injective.vo Bool_more.vo List_more.vo genperm.vo ill.vo ll.vo
 
-yalla_ax.vo: $(MYLIBSDIR)/Injective.vo yalla_ax.v
+yalla_ax.vo: Injective.vo yalla_ax.v
 
-bbb.vo: bbb.v $(MYLIBSDIR)/List_more.vo $(MYLIBSDIR)/Permutation_more.vo $(MYLIBSDIR)/Permutation_solve.vo $(MYLIBSDIR)/genperm.vo ll.vo ll_fragments.vo
-nn.vo: nn.v $(MYLIBSDIR)/Injective.vo $(MYLIBSDIR)/Bool_more.vo $(MYLIBSDIR)/List_more.vo $(MYLIBSDIR)/Permutation_more.vo $(MYLIBSDIR)/Permutation_solve.vo $(MYLIBSDIR)/genperm.vo subs.vo isubs.vo ll_fragments.vo bbb.vo
-nnfoc.vo: nnfoc.v $(MYLIBSDIR)/Injective.vo $(MYLIBSDIR)/List_more.vo $(MYLIBSDIR)/Permutation_more.vo $(MYLIBSDIR)/Permutation_solve.vo $(MYLIBSDIR)/genperm.vo basic_tactics.vo ll_fragments.vo ill.vo llfoc.vo tl.vo nn.vo
+bbb.vo: bbb.v List_more.vo Permutation_more.vo Permutation_solve.vo genperm.vo ll.vo ll_fragments.vo
+nn.vo: nn.v Injective.vo Bool_more.vo List_more.vo Permutation_more.vo Permutation_solve.vo genperm.vo subs.vo isubs.vo ll_fragments.vo bbb.vo
+nnfoc.vo: nnfoc.v Injective.vo List_more.vo Permutation_more.vo Permutation_solve.vo genperm.vo basic_tactics.vo ll_fragments.vo ill.vo llfoc.vo tl.vo nn.vo
 
 
