Add Dependent_Forall_Type structure for induction principle required by the new mix-rules

--- a/yalla/Makefile
+++ b/yalla/Makefile
@@ -84,5 +84,10 @@ mell_msetoid.vo : mell_msetoid.v $(OLLIBSDIR)/Injective.vo $(OLLIBSDIR)/fmsetoid
 llpol.vo: llpol.v $(OLLIBSDIR)/Injective.vo $(OLLIBSDIR)/List_more.vo $(OLLIBSDIR)/List_Type_more.vo $(OLLIBSDIR)/Permutation_Type.vo $(OLLIBSDIR)/Permutation_Type_more.vo $(OLLIBSDIR)/Permutation_Type_solve.vo ll_cut.vo
 lambek.vo: lambek.v $(OLLIBSDIR)/Injective.vo $(OLLIBSDIR)/List_more.vo $(OLLIBSDIR)/List_Type_more.vo ill_cut.vo
 
+Forall_Type_more2.vo: Forall_Type_more2.v $(OLLIBSDIR)/List_Type_more.vo
+Dependent_Forall_Type.vo : Dependent_Forall_Type.v $(OLLIBSDIR)/List_Type_more.vo Forall_Type_more2.vo
+concat_Type_more.vo : concat_Type_more.v Dependent_Forall_Type.vo basic_misc.vo $(OLLIBSDIR)/List_Type_more.vo
+flat_map_Type_more_new.vo : flat_map_Type_more_new.v $(OLLIBSDIR)/List_more.vo $(OLLIBSDIR)/List_Type_more.vo $(OLLIBSDIR)/Permutation_Type_more.vo $(OLLIBSDIR)/CyclicPerm_Type.vo $(OLLIBSDIR)/Injective.vo
+
 
 
