git subrepo pull ollibs
subrepo:
  subdir:   "ollibs"
  merged:   "ab8f8b2"
upstream:
  origin:   "git@github.com:olaure01/ollibs.git"
  branch:   "master"
  commit:   "ab8f8b2"
git-subrepo:
  version:  "0.3.1"
  origin:   "???"
  commit:   "???"

--- a/ollibs/.gitignore
+++ b/ollibs/.gitignore
@@ -15,6 +15,7 @@
 *.native
 
 .coqdeps.d
+.Makefile.d
 Makefile.conf
 
 *.o
@@ -22,6 +23,8 @@ Makefile.conf
 *.v.d
 *.vio
 *.vo
+*.vok
+*.vos
 .coq-native/
 .csdp.cache
 .lia.cache
