Makefile generated by coq_makefile

--- a/.gitignore
+++ b/.gitignore
@@ -16,11 +16,19 @@
 *.mllib.d
 *.mlpack.d
 *.native
+
+.coqdeps.d
+.Makefile.d
+Makefile
+Makefile.conf
+
 *.o
 *.v.crashcoqide
 *.v.d
 *.vio
 *.vo
+*.vok
+*.vos
 .coq-native/
 .csdp.cache
 .lia.cache
